--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "7.1.2",
     "jspdf": "2.5.1",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "3.9.1"
   },
   "devDependencies": {
