--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "1.4.6",
+    "dotenv": "16.4.5",
     "express": "4.18.2",
     "express-handlebars": "7.1.2",
+    "express-session": "1.18.0",
     "jspdf": "2.5.1",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
